# NaiveBayes

./: .gitignore  CMakeLists.txt  README.md  csv.c  csv.h  defines.h  defines.h~  extra.c  extra.h  learning.c  learning.h  main  main.c  main.h  naive.c  prediction.c  prediction.h  training.c  training.h  util.c  util.c~  util.h  util.h~
datasets/: column.csv  iris.csv  wine.csv
datasets/full/: libras.csv  mfeat.csv  urbanland.csv
datasets/summaries/: urbanland.csv
datasets/test/: pima.csv
prediction/: csv.c  csv.c~  csv.h  defines.h  extra.c  extra.c~  extra.h  main.c  main.c~  makearm  makearm~  makefile  makepc~  prediction.c  prediction.c~  prediction.h
testers/: Summaries output.txt  iris.csv  mfeat-zer.csv  naive.py  naive_full.py  wine.csv
training/: csv.c  csv.h  defines.h  main.c  makefile  training.c  training.h
training/datasets/test/: libras.csv  mfeat.csv  urbanland.csv
training/summaries/: libras.csv  mfeat.csv
